# synapso-core

./: README.md  config.yaml  meta.db  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt
.github/workflows/: coverage.yml  python-publish.yml
resources/: sample.md
resources/config/: test_invalid_config.yaml  test_valid_config.yaml
scripts/: refresh_reqs.sh
src/synapso/: config_manager.py  cortex_manager.py
src/synapso/chunking/: __init__.py  factory.py  interface.py
src/synapso/chunking/implementations/md/: chonkie_recursive_chunker.py  langchain_markdown_chunker.py
src/synapso/cortex/: __init__.py  cortex.py  cortex_manager.py
src/synapso/cortex_watcher/: cortex_watcher.py
src/synapso/ingestor/: document_ingestor.py
src/synapso/persistence/: factory.py
src/synapso/persistence/interfaces/: __init__.py  meta_store.py  private_store.py  vector_store.py
src/synapso/persistence/models/: __init__.py  cortex.py
src/synapso/query_manager/: query_config.py  query_manager.py
src/synapso/reranker/: __init__.py  factory.py  interface.py
src/synapso/summarizer/: __init__.py  factory.py  interface.py
src/synapso/vectorizer/: __init__.py  factory.py  interface.py
src/synapso/vectorizer/implementations/: sentence_transformer_embeddings.py
src/synapso_core/: __init__.py  config_manager.py  cortex_manager.py  job_manager.py  models.py  query_manager.py  sqlite_utils.py  synapso_logger.py
src/synapso_core/chunking/: __init__.py  factory.py  interface.py
src/synapso_core/chunking/implementations/: __init__.py
src/synapso_core/chunking/implementations/md/: __init__.py  chonkie_recursive_chunker.py  custom_chunker.py  langchain_markdown_chunker.py
src/synapso_core/chunking/implementations/txt/: __init__.py  simple_txt_chunker.py
src/synapso_core/cortex_watcher/: cortex_watcher.py
src/synapso_core/data_store/: __init__.py  data_models.py  factory.py  interfaces.py
src/synapso_core/data_store/backend/: __init__.py
src/synapso_core/data_store/backend/sqlite/: __init__.py  sqlite_backend_identifier.py  sqlite_meta_store.py  sqlite_private_store.py  (+2 more)
src/synapso_core/ingestor/: __init__.py  document_ingestor.py
src/synapso_core/model_provider/: __init__.py  base.py  embedding_models.py  language_models.py  manager.py
src/synapso_core/persistence/: __init__.py  factory.py
src/synapso_core/persistence/interfaces/: __init__.py  base_store.py  meta_store.py  vector_store.py
src/synapso_core/persistence/models/: base.py  metastore_models.py  private_store_models.py
src/synapso_core/query_manager/: __init__.py  query_manager.py
src/synapso_core/reranker/: __init__.py  bm25_reranker.py  factory.py  interface.py  modernbert_reranker.py  qwen3_reranker.py
src/synapso_core/summarizer/: __init__.py  factory.py  instruct_summarizer.py  interface.py
src/synapso_core/utils/: __init__.py  content_hash.py
src/synapso_core/vectorizer/: __init__.py  factory.py  interface.py
src/synapso_core/vectorizer/implementations/: sentence_transformer_embeddings.py
tests/: test_config_manager.py  test_cortex_manager.py  test_document_ingestor.py  test_meta_sqlite.py  test_vector_sqlite.py
tests/chunking/: test_langchain_markdown_chunker.py
tests/chunking/md/: test_chonkie_recursive_chunker.py  test_langchain_markdown_chunker.py
tests/vectorizer/: test_sentence_transformer_vectorizer.py
(+6 files in other folders)
