[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synapso_core"
version = "0.1.3"
description = "Synapso Core"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Ganesh Palanikumar", email = "me@ganeshpkumar.dev"}]
dependencies = [
    "sqlalchemy==2.0.41",
    "langchain-text-splitters==0.3.8",
    "chonkie[hub,st]==1.1.1",
    "loguru==0.7.3",
    "pydantic==2.11.7"
]

[project.urls]
Homepage = "https://github.com/synapso-xyz/synapso-core"

[tool.setuptools]
packages = ["synapso_core"]
package-dir = {"" = "src"}
