[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synapso_core"
version = "0.2.0"
description = "Synapso Core"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Ganesh Palanikumar", email = "me@ganeshpkumar.dev"}]
dependencies = [
    "sqlalchemy==2.0.41",
    "langchain-text-splitters==0.3.8",
    "chonkie[hub,st]==1.1.1",
    "loguru==0.7.3",
    "pydantic==2.11.7",
    "rank-bm25==0.2.2",
    "nltk==3.9.1",
    "sqlite-vss==0.1.2",
    "aiosqlite==0.21.0",
    "greenlet==3.2.3",
    "mlx-lm==0.26.2"
]

[project.urls]
Homepage = "https://github.com/synapso-xyz/synapso-core"

[tool.setuptools]
packages = [
    "synapso_core",
    "synapso_core.chunking",
    "synapso_core.chunking.implementations",
    "synapso_core.chunking.implementations.md",
    "synapso_core.cortex_watcher",
    "synapso_core.ingestor",
    "synapso_core.reranker",
    "synapso_core.summarizer",
    "synapso_core.vectorizer",
    "synapso_core.vectorizer.implementations",
    "synapso_core.data_store",
    "synapso_core.data_store.backend",
    "synapso_core.data_store.backend.sqlite"
]
package-dir = {"" = "src"}
